--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "email-validator": "^2.0.4",
+    "emailjs-com": "^2.4.1",
     "gatsby": "^1.9.277",
     "gatsby-image": "^1.0.55",
     "gatsby-link": "^1.6.46",
+    "gatsby-plugin-mailchimp": "^5.1.2",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.46",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-transformer-remark": "^1.7.44",
-    "lodash": "^4.17.10"
+    "google-spreadsheet": "^3.0.11",
+    "informed": "^3.6.1",
+    "lodash": "^4.17.10",
+    "react-google-sheets": "^0.4.0"
   },
   "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
   "keywords": [
